# sentinel

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  docker-compose.yml  locustfile.py  mlflow.db  prometheus.yml  pyproject.toml
.github/workflows/: ci.yml
app/: canary.py  drift.py  main.py  metrics.py  model_registry.py  router.py
grafana/dashboards/: ml_serving.json  sentinel.json
grafana/provisioning/dashboards/: provider.yml
prometheus/: alerts.yml
scripts/: promote_champion.py  run_load_test.py  smoke_test.py  train_baseline.py
tests/: test_app.py  test_canary.py  test_canary_polling.py  test_drift.py  test_e2e_rollback.py  test_health.py  test_locustfile.py  test_metrics.py  test_model_registry.py  test_observability.py  test_train_baseline.py  test_train_baseline_integration.py
